--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>PerfectStaff - Staff Orientation software</title>
-    <meta name="description" content="PerfectStaff - Staff Orientation software">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>PerfectStaff.png">
+  <title>PerfectStaff - Staff Orientation software</title>
+  <meta name="description" content="PerfectStaff - Staff Orientation software">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+</head>
+
+<body id="container">
+  <noscript>
+    <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
+
+<style>
+  @media only screen and (orientation:portrait) {
+
+    #container {
+
+      height: 100vw;
+
+      -webkit-transform: rotate(90deg);
+
+      -moz-transform: rotate(90deg);
+
+      -o-transform: rotate(90deg);
+
+      -ms-transform: rotate(90deg);
+
+      transform: rotate(90deg);
+
+    }
+
+  }
+
+  @media only screen and (orientation:landscape) {
+
+    #container {
+
+      -webkit-transform: rotate(0deg);
+
+      -moz-transform: rotate(0deg);
+
+      -o-transform: rotate(0deg);
+
+      -ms-transform: rotate(0deg);
+
+      transform: rotate(0deg);
+
+    }
+</style>
