Add buttons and minor tweaking

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
 </html>
 
 <style>
-  @media only screen and (orientation:portrait) {
+  /* @media only screen and (orientation:portrait) {
 
     #container {
 
@@ -58,5 +58,5 @@
 
       transform: rotate(0deg);
 
-    }
+    } */
 </style>
